# pygfa

./: .gitignore  AGENTS.md  Actually, looking more carefully at the error message in the code  And then it does  BENCHMARK.md  CLAUDE.md  LICENSE  Looking at the grammar  README.md  Untitled.ipynb  When parsing a line, the tree structure is  compress.py  debug_fixed64.py  debug_fixed64_detailed.py  debug_links_fixed64.py  demo.py  g_pprint.txt  h_pprint.txt  log.csv  msa.maf  pyproject.toml  pytest.ini  simple_debug.py  test.ipynb  test_minimal_fixed64.py
.claude/: settings.local.json
.virtual_documents/: test.ipynb
analysis/: TODO.md  documentation.md  graph_planning.md  requirement.md  sequence_management.md
benchmark/: extract_subgraph  extract_subgraph.py  graphs.py  run_graph_operation_benchmark.py  run_profiler.py
data/: check_overlap_test.gfa  check_overlap_test_correct.fasta  check_overlap_test_fail.fasta  check_overlap_test_no_consistency.gfa  check_overlap_test_no_fasta.gfa  compression_test.gfa  compression_test2.gfa  equality_test.gfa  equality_test2.gfa  example1_pprint_expected.txt  example2.gfa  example3.gfa  example_1.gfa  example_2.gfa  example_3.gfa  out_subgraph_10k.gfa  out_subgraph_5k.gfa  rGFA1_test.gfa  rGFA_.gfa  sample1.gfa  sample1.gfa.xz  sample1.gfa.zst  sample2.gfa  test_biconnected.gfa  test_check_overlap.gfa  test_compression.gfa  test_dovetail_operations.gfa  test_dovetails_all_simple_paths.gfa  test_dovetails_iterator.gfa  test_gfa_graph_sample_gfa1.gfa  test_gfa_operations.gfa  test_linear_path.gfa  test_serialization_mini_graph_gfa1.gfa
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  modules.rst  pygfa.dovetail_operations.rst  pygfa.graph_element.parser.rst  pygfa.graph_element.rst  pygfa.rst  to_bgfa.py
docs/source/: Makefile  conf.py  make.bat  pygfa.algorithms.rst  pygfa.serializer.rst
pygfa/: __init__.py  bgfa.py  exceptions.py  gfa.py  gfa1_serializer.py  gfa2_serializer.py  gfa_utils.py  io.py  operations.py  pygfa.py  types.py
pygfa/algorithms/: simple_paths.py  traversal.py
pygfa/bgfa/: __init__.py  _codec_utils.py  _constants.py  _reader.py  _validation.py  _writer.py
pygfa/compression/: compression.py
pygfa/dovetail_operations/: iterator.py  (+3 more)
results/: example_2.txt  example_3.txt
spec/: gfa_binary_format.md
test/: benchmark_filter.py  conftest.py  debug_bgfa.py  debug_bgfa_fixed.py  debug_examine_bgfa.py  debug_final_test.py  debug_segment_names.py  debug_test.py  fix_critical_imports.py  isolate_benchmark.py  run_tests.sh  test_algorithms.py  test_all_encodings.py  test_bgfa.py  test_bgfa_header_validation.py  test_bgfa_path_walk.py  test_bgfa_roundtrip.py  test_bgfa_roundtrip_large.py  test_bgfa_roundtrip_medium.py  test_bgfa_roundtrip_small.py  test_bgfa_skip_payloads.py  test_biconnected.py  test_check_overlap.gfa  test_check_overlap.py  test_cigar_decomposed.py  test_compression.py  test_dovetail_operations.py  test_dovetails_all_simple_paths.py  test_dovetails_connected.py  test_dovetails_iterator.py  test_encoding.py  test_encoding_field_offsets.py  test_encoding_roundtrip.py  test_gfa_graph.py  test_gfa_operations.py  test_gfa_utils.py  test_graph_element.py  test_graph_operations.py  test_line.py  test_linear_path.py  (+16 more)
tools/: canonical_gfa.py  prettify_gfa.py  same_gfa.py  to_bgfa.py
workflow/: .gitignore  README.md  Snakefile  Snakefile_single_param  USAGE_EXAMPLES.md  config.yaml  config_single_param.yaml
(+369 files in other folders)
