[project]
authors = [{name = "Gianluca Della Vedova", email = "gianluca@dellavedova.org"}]
dependencies = []
name = "pygfa"
requires-python = ">= 3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pygfa = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.0,<3.15"
numpy = ">=2.4.0,<3"
lark = ">=1.3.1,<2"
networkx = ">=3.6.1,<4"
biopython = ">=1.86,<2"
pytest = ">=9.0.2,<10"
