[project]
authors = [{name = "Gianluca Della Vedova", email = "gianluca@dellavedova.org"}]
dependencies = [
    "networkx>=3.6.1,<4",
    "lark>=1.3.1,<2",
    "biopython>=1.86,<2",
    "numpy>=2.4.0,<3",
    "zstandard>=0.22.0",
    "lz4>=4.0.0",
    "brotli>=1.1.0",
]
name = "pygfa"
requires-python = ">= 3.14"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "ruff>=0.8.0,<1",
    "mypy>=1.13.0,<2",
    "coverage>=7.0.0,<8",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pygfa = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.0,<3.15"
numpy = ">=2.4.0,<3"
lark = ">=1.3.1,<2"
networkx = ">=3.6.1,<4"
biopython = ">=1.86,<2"
pytest = ">=9.0.2,<10"
toml = ">=0.10.2,<0.11"
ruff = ">=0.15.0,<0.16"
mypy = ">=1.19.1,<2"
zstandard = ">=0.22.0"
lz4 = ">=4.0.0"
brotli = ">=1.1.0"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-s",
    "--full-trace",
    "--tb=long",
    "--strict-markers",
    "--color=yes"
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(filename)s:%(lineno)d: %(message)s"
